Fixed home icon img not showing when selected

--- a/parts/_serverbar.scss
+++ b/parts/_serverbar.scss
@@ -23,5 +23,5 @@ a[aria-label=Home] {
 
 // Background of a selected server without an image
 .wrapper-1BJsBx.selected-bZ3Lue .childWrapper-anI2G9 {
-    background-color: $hoverColor !important;
+    background-color: $hoverColor;
 }
